Adding glfw and glm with example

--- a/glad/BUILD
+++ b/glad/BUILD
@@ -41,4 +41,5 @@ cc_library(
     name = "glad",
     srcs = [":gen_glad_srcs"],
     hdrs = [":gen_glad_hdrs"],
+    visibility = ["//visibility:public"],
 )
